--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,9 @@ dependencies:
   flutter_svg:
   oktoast:
   syncfusion_flutter_charts:
+  firebase_auth:
+  google_sign_in:
+  firebase_core:
 
 dev_dependencies:
   flutter_test:
