--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_core:
   flutter_spinkit:
   cloud_firestore:
+  shared_preferences: ^0.5.12
 
 dev_dependencies:
   flutter_test:
