--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   syncfusion_flutter_charts:
   firebase_auth:
   google_sign_in:
-  firebase_core:
+  firebase_core: ^0.5.0+1
   flutter_spinkit:
   cloud_firestore:
   shared_preferences: ^0.5.12
