--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cloud_firestore:
   shared_preferences: ^0.5.12
   connectivity: ^0.4.9+5
+  package_info: ^0.4.3
 
 dev_dependencies:
   flutter_test:
